[package]
name = "tokio-signal"
version = "0.2.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/tokio-signal"
homepage = "https://github.com/alexcrichton/tokio-signal"
documentation = "https://docs.rs/tokio-signal/0.1"
description = """
An implementation of an asynchronous Unix signal handling backed futures.
"""
categories = ["asynchronous"]

[badges]
travis-ci = { repository = "alexcrichton/tokio-signal" }
appveyor = { repository = "alexcrichton/tokio-signal" }

[dependencies]
futures = "0.1.11"
mio = { git = "https://github.com/redox-os/mio" }
tokio-reactor = { git = "https://github.com/redox-os/tokio" }
tokio-executor = { git = "https://github.com/redox-os/tokio" }
tokio-io = { git = "https://github.com/redox-os/tokio" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
mio-uds = "0.6"

[dev-dependencies]
tokio-core = { git = "https://github.com/redox-os/tokio-core" }
tokio = { git = "https://github.com/redox-os/tokio" }

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["minwindef", "wincon"]
